--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -85,11 +85,11 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>(Technologies: Kafka, Python, Aerospike, Java/Spring, MsSQL, C#/.NET, Kubernetes/Helm, Docker, Kibana, DataDog, Grafana, JMeter, GCP, GraphQl, Apollo, gRPC, php, InfluxDb).</li>
-                                        <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
-                                        <li>Delivered features, including event-driven data pipelines, UI/Frontend, monitoring, microservices, containerization, decoupling,
+                                        <li>Technologies: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, MsSQL, InfluxDb, C#/.NET, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
+                                        <li>Delivered features, including event-driven data pipelines and monitoring, UI/Frontend, microservice interfaces, containerization, decoupling,
                                             resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
-                                        <li>Migrated software systems to GCP, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
+                                        <li>Migrated in-house software systems to GCP Infrastructure, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
+                                        <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
                                     </ul>
                                 </div>
@@ -233,6 +233,25 @@
                         <div class="skill">
                             <div class="skill__name">Mandarin Chinese:</div>
                             <div class="skill__name">看，写，说</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section section--sidebar">
+                    <div class="section__header">
+                        <span>C</span>
+                        <span>E</span>
+                        <span>R</span>
+                        <span>T</span>
+                        <span>S</span>
+                    </div>
+                    <div class="section__content">
+                        <div class="skill">
+                            <div class="skill__name">Full Stack Development</div>
+                            <div class="skill__name">App Academy</div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill__name">Machine Learning</div>
+                            <div class="skill__name">Coursera Course by A. Ng</div>
                         </div>
                     </div>
                 </div>
