--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -85,7 +85,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Technologies: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, MsSQL, InfluxDb, C#/.NET, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
+                                        <li>Technologies: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
                                         <li>Delivered features, including event-driven data pipelines and monitoring, UI/Frontend, microservice interfaces, containerization, decoupling,
                                             resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
                                         <li>Migrated in-house software systems to GCP Infrastructure, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
