--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -247,11 +247,11 @@
                     <div class="section__content">
                         <div class="skill">
                             <div class="skill__name">Full-Stack Development:</div>
-                            <div class="skill__name">App Academy</div>
+                            <div class="skill__name">App Academy.</div>
                         </div>
                         <div class="skill">
                             <div class="skill__name">Machine Learning:</div>
-                            <div class="skill__name">Coursera Course, A. Ng</div>
+                            <div class="skill__name">Course By A. Ng.</div>
                         </div>
                     </div>
                 </div>
