--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -99,7 +99,7 @@
                             <div class="experience" style="page-break-inside: avoid;">
                                 <div class="experience__header">
                                     <div class="experience__header-line">
-                                        <div class="experience__title">Jewell Studios</div>
+                                        <div class="experience__title">Personal Projects</div>
                                         <div class="experience__date">2017 - Present</div>
                                     </div>
                                 </div>
