--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -150,7 +150,7 @@
                         <div class="experience__description">
                             <div>
                                 <ul>
-                                    <li>Taught full stack software development and algorithms at App Academy, placing over 100 students.</li>
+                                    <li>Taught full-stack software development and algorithms at App Academy to over 100 students, enabling and coaching them to find full-time employment.</li>
                                 </ul>
                             </div>
                         </div>   
