--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -85,9 +85,9 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Technologies: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
-                                        <li>Delivered features, including event-driven data pipelines and monitoring, UI/Frontend, microservice interfaces, containerization, decoupling,
-                                            resulting in satisfaction of stakeholders' requirements for usability, high availability, observability. </li>
+                                        <li><b>Technologies</b>: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
+                                        <li>Designs and delivered event-driven data pipelines with monitoring, UI/Frontend, microservice interfaces, containerization, decoupling,
+                                            resulting in stability, high availability, observability, serving 10K requests/min, 40 million messages/day. </li>
                                         <li>Migrated in-house software systems to GCP Infrastructure, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
                                         <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
