--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -86,8 +86,8 @@
                                 <div>
                                     <ul>
                                         <li><b>Technologies</b>: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
-                                        <li>Designed and delivered event-driven data pipelines with monitoring, UI/Frontend, microservice interfaces, containerization, decoupling,
-                                            resulting in stability, high availability, observability, serving 10K requests/min, 40 million messages/day. </li>
+                                        <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), containerization, decoupling,
+                                            resulting in stability, high availability, observability. </li>
                                         <li>Migrated in-house software systems to GCP Infrastructure, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
                                         <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
