--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -88,8 +88,8 @@
                                         <li><b>Technologies</b>: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
                                         <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), UI features, containerization, decoupling,
                                             resulting in stability, high availability, observability. </li>
-                                        <li>Migrated in-house software systems to GCP Infrastructure, performed upgrades, solved quarter-long debugging efforts, resulting in the completion of company-wide migration, decoupling, cost reduction initiatives.</li>
-                                        <li>Designed and owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
+                                        <li>Migrated in-house software systems to GCP Infrastructure, enabling decoupling, and infrastructure cost initiatives.</li>
+                                        <li>Owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
                                     </ul>
                                 </div>
