--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -86,11 +86,10 @@
                                 <div>
                                     <ul>
                                         <li><b>Technologies</b>: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
-                                        <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), UI features, containerization, decoupling,
-                                            resulting in stability, high availability, observability. </li>
-                                        <li>Migrated in-house software systems to GCP Infrastructure, enabling decoupling, and infrastructure cost initiatives.</li>
-                                        <li>Owned incremental delivery in an Agile environment, resulting in trust from stakeholders.</li>
-                                        <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>   
+                                        <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), Full-stack applications.</li>
+                                        <li>Improved existing and new applications at the infrastructure level by migrated in-house software systems to GCP Infrastructure (enabling decoupling, and infrastructure cost reduction). Ensured high quality of deliverables by improving stability and availability, observability, security by dependency management, containerization, authentication and monitoring</li>
+                                       <li>Owned incremental delivery in an Agile environment, interfacing with engineering and business stakeholders.</li>
+                                        <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>
                                     </ul>
                                 </div>
                             </div>
