--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -89,10 +89,10 @@
                                         <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), Full-stack applications.</li>
                                         <li>Improved existing and new applications at the infrastructure level by:
                                             <ul>
-                                                <li>Migrating in-house software systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).<\li>
-                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (authentication based on Okta/ Istio/ Keycloak) Worked on multiple projects involving containerization, Dependency management (automated and manual), ephemeral dev environments, Federated data access.<\li>
-                                            <\ul>    
-                                        <\li>
+                                                <li>Migrating in-house software systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
+                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (authentication based on Okta/ Istio/ Keycloak) Worked on multiple projects involving containerization, Dependency management (automated and manual), ephemeral dev environments, Federated data access.</li>
+                                            </ul>    
+                                        </li>
                                        <li>Owned incremental delivery in an Agile environment, interfacing with engineering and business stakeholders.</li>
                                         <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>
                                     </ul>
