--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -89,12 +89,12 @@
                                         <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), Full-stack applications.</li>
                                         <li>Improved existing and new applications at the infrastructure level by:
                                             <ul>
-                                                <li>Migrating in-house software systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
-                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (authentication based on Okta/ Istio/ Keycloak) Worked on multiple projects involving containerization, Dependency management (automated and manual), ephemeral dev environments, Federated data access.</li>
+                                                <li>Migrating systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
+                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (authentication based on Okta/ Istio/ Keycloak) Worked on multiple projects involving containerization, ephemeral dev environments, Federated data access.</li>
                                             </ul>    
                                         </li>
                                        <li>Owned incremental delivery in an Agile environment, interfacing with engineering and business stakeholders.</li>
-                                        <li>Created educational artifacts and mentored new members to the department, resulting in increased developer velocity and shorter critical resolution turn around.</li>
+                                        <li>Created educational artifacts and mentored new members, resulting in increased developer velocity and shorter critical resolution turn around.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -114,12 +114,7 @@
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
                                                 which was accepted into the Oberlin College start up accelerator program. </li>
-                                            <li>Won cash prizes, presented full-stack solutions for
-                                                homelessness,
-                                                active-shooter
-                                                emergencies,
-                                                sustainability, crypto-currency trading, genetic advising, and supply
-                                                chain.</li>
+                                            <li>Won cash prizes, presented full-stack solutions at hackathons in Bay Area.</li>
                                             <li>
                                                 Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
                                             <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency.
