--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -77,9 +77,7 @@
                                     <div class="experience__title">Wayfair</div>
                                     <div class="experience__date">Engineer L3: March 2023 - Present</div>
                                     </br>
-                                    <div class="experience__date">Engineer L2: July 2021 - March 2023</div>
-                                    </br>
-                                    <div class="experience__date">Engineer L1: Dec. 2019 - July 2021</div>
+                                    <div class="experience__date">Engineer L1, L2: Dec. 2019 - March 2023</div>
                                 </div>
                             </div>
                             <div class="experience__description">
