--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -88,7 +88,7 @@
                                         <li>Improved existing and new applications at the infrastructure level by:
                                             <ul>
                                                 <li>Migrating systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
-                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (Okta/ Istio/ Keycloak) Worked on multiple projects involving containerization, ephemeral dev environments, Federated data access.</li>
+                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (Okta/ Istio/ Keycloak). Worked on multiple projects involving containerization, ephemeral dev environments, Federated data access.</li>
                                             </ul>    
                                         </li>
                                        <li>Owned incremental delivery in an Agile environment, interfacing with engineering and business stakeholders.</li>
