--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Adrian Jewell, pianist</title>
+    <title>Adrian Jewell</title>
     <style>
 		html {
 			font-size: 16px;
@@ -35,32 +35,18 @@
 	</style>
 </head>
 <body>	
-	    <h1>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</h1>
-	<p>
-		Adrian Jewell, a Boston-based pianist and composer, has performed within a wide range of genres and styles, including musical theatre, circus, jazz, religious, and classical. He is skilled in the collaborative arts, as well as in the abilities of improvisation and playing by ear. He has performed in China and the United States. He is a graduate of the Oberlin Conservatory in Oberlin Ohio with a dual degree in classical piano performance and neuroscience. 
-	</br>	</br>
-<a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
-	</br>
-	<a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a>
-	</br>	</br>
-<a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a>
-</br>	</br>
-Philosophy of music pedagogy:
-	</br>	</br>
-Given all the high-quality content available today, is there value in hiring a private teacher? The answer is resoundingly yes! For example, keep in mind the history. In fact, there has always been a vast amount of teaching material, but that content historically was in the form of textbooks, whereas today that content is in the form of videos. So actually, only the medium has changed, rather than the availability. Therefore, just as there previously was value in hiring a teacher, there is still value today. 
-	</br>	</br>
-Below are the benefits that a student gains from having a private music instructor:
-	</br>	</br>
-    1. A teacher is a musical companion. That is, a teacher is somebody with whom to exchange ideas. They also provide encouragement, and engage in conversation. 
-	</br>	</br>
-2. A teacher can provide good judgement on teaching content is high quality or not. This will save a student a lot of time. 
-	</br>	</br>
-3. A teacher can be very specific. Because of music’s personal nature, it lends itself  to challenges that are also personal in nature. With a private teacher, solutions to these challenges can be taught much more quickly than when a student tries to discover them from watching a video.
-	</br>	</br>
-At the end of day, however, a private teacher is still a privilege rather rather than a requirement. Ultimately, a music student still teaches oneself, and this can be done very easily with the help of video tutorials etc. However, if the student still struggles to learn from videos and books, a teacher will be able to train a student in how to learn, and provide discipline and motivation. 
-
-	</p>	</br>	</br>
-
-    </body>
-
+<h1>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</h1>
+	<p>Hi I'm Adrian, and thanks for visiting my personal website!</p>	
+	<p>I am interested in improving lives, making life's tasks easier and better. I am interested in sharing the joy and blessing of music.  
+		Many of my friends will tell you that when they first met me, 
+		they were very uncertain about what kind of person I was, but after some time, they found out I was a really good guy.</p>	
+	<p>As for a little bit about me: I love my wife, my family, having good conversations. 
+		I am a software engineer, a classical pianist, an educator, a writer.</p>	
+	</p>
+		Feel free to check out my work or reach out if you have any questions.
+		</br></br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
+		</br><a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a></br>	
+		</br><a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a></br>
+	</p>	
+</body>
 </html>
