--- a/index.html
+++ b/index.html
@@ -37,12 +37,9 @@
 <body>	
 <h1>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</h1>
 	<p>Hi I'm Adrian, and thanks for visiting my personal website!</p>	
-	<p>I am interested in improving lives, making life's tasks easier and better. I am interested in sharing the joy and blessing of music.  
-		Many of my friends will tell you that when they first met me, 
-		they were very uncertain about what kind of person I was, but after some time, they found out I was a really good guy.</p>	
-	<p>As for a little bit about me: I love my wife, my family, having good conversations. 
-		I am a software engineer, a classical pianist, an educator, a writer.</p>	
-	</p>
+	<p>I am interested in improving lives, making life's tasks easier and better. I am interested in sharing the joy and blessing of music.</p>	
+	<p>I love my wife, my family, having good conversations. I am a software engineer, a classical pianist, an educator, a writer.</p>	
+	<p>
 		Feel free to check out my work or reach out if you have any questions.
 		</br></br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
 		</br><a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a></br>	
