--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -84,7 +84,7 @@
                                 <div>
                                     <ul>
                                         <li><b>Technologies</b>: Kafka, DataDog, Grafana, Kibana, GCP, Python, Java/Spring, Javascript, .NET, MsSQL, InfluxDb, Kubernetes/Helm, Docker, Aerospike, JMeter, GraphQl/Apollo, php.</li>
-                                        <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10 Requests/min), Full-stack applications.</li>
+                                        <li>Designed and delivered event-driven data pipelines (40 million msg/day), microservice interfaces (10K Requests/min), Full-stack applications.</li>
                                         <li>Improved existing and new applications at the infrastructure level by:
                                             <ul>
                                                 <li>Migrating systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
