--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
 <body>	
 <h1>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</h1>
 	<p>Hi I'm Adrian, and thanks for visiting my personal website!</p>	
-	<p>I am interested in improving lives, making life's tasks easier and better. I am interested in sharing the joy and blessing of music.</p>	
-	<p>I love my wife, my family, having good conversations. I am a software engineer, a classical pianist, an educator, a writer.</p>	
 	<p>
-		Feel free to check out my work or reach out if you have any questions.
+		Feel free to check out my work and ask any questions.
 		</br></br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
 		</br><a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a></br>	
 		</br><a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a></br>
