--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -84,14 +84,9 @@
                                 <div>
                                     <ul>
                                         <li>Designed and delivered event-driven systems, microservice interfaces, full-stack applications to manage the descriptive content of 30+ million products, 1000+ points of metadata per product, serving storefront, legal, and supplier clients, etc.</li>
-                                        <li>Improved existing and new applications at the infrastructure level by:
-                                            <ul>
-                                                <li>Migrating systems to Cloud based (GCP) infrastructure (enabling decoupling, and infrastructure cost reduction).</li>
-                                                <li>Ensured high quality of deliverables by improving stability and availability, observability (monitoring and test coverage), security (Okta/ Istio/ Keycloak). Worked on multiple projects involving containerization, ephemeral dev environments, Federated data access.</li>
-                                            </ul>    
-                                        </li>
-                                        <li>Owned incremental delivery in an Agile environment, interfacing with engineering and business stakeholders.</li>
-                                        <li>Created educational artifacts and mentored new members, resulting in increased developer velocity and shorter critical resolution turn around.</li>
+                                        <li>Mitigated pending legal ramifications and website takedown by decoupling and fixing a background job syncing 9 million data points.</li>
+                                        <li>Saved 5000K a month and corrected data consistency in descriptive content for stakeholders by debugging and fixing a data pipeline serving millions of events per day.</li>
+                                        <li>Performed zero-downtime upgrades on tier 1 micro-services, serving 10K requests/second.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -133,6 +128,23 @@
                                     <ul>
                                         <li>Delivered UI features on supply chain projects that drive savings of tens of thousands to millions of dollars. (Technologies: Javascript, Angular, Web Components, Java).
                                         </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience__header">
+                                <div class="experience__header-line">
+                                    <div class="experience__title">Educator</div>
+                                    <div class="experience__date">App Academy: Feb. - Aug. 2019 (Full Time)</div>
+                                </div>
+                            </div>
+                            <div class="experience__description">
+                                <div>
+                                    <ul>
+                                        <li>Taught Full Stack Software Development and Data Structures, placing over 100 students as part of the placements team
+                                        </li>
+                                        <li>Published an article, getting 40K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
                                     </ul>
                                 </div>
                             </div>
