--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
 	</style>
 </head>
 <body>	
-<h1>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</h1>
-	<p>Hi I'm Adrian, and thanks for visiting my personal website!</p>	
-	<p>
+<header>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</header>
+	<section>Hi I'm Adrian, and thanks for visiting my personal website!</section>	
+	<section>
 		Feel free to check out my work and ask any questions.
 		</br><a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a></br>
-		</br></br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
+		</br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
 		</br><a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a></br>	
-	</p>	
+	</section>
+	<section>
+		Writings:
+		</br><a href="https://adrianjewell91.github.io/decoupler-website/">How to decouple a monolith db</a></br>
+		</br><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How music and coding are so similar</a></br>
+		</br><a href="https://github.com/Adrianjewell91/how-to-code">How programmers think</a></br>
+	</section>
 </body>
 </html>
