--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -85,7 +85,7 @@
                                     <ul>
                                         <li>Designed and delivered event-driven systems, microservice interfaces, full-stack applications to manage the descriptive content of 30+ million products, 1000+ points of metadata per product, serving storefront, legal, and supplier clients, etc.</li>
                                         <li>Mitigated pending legal ramifications and website takedown by decoupling and fixing a background job syncing 9 million data points.</li>
-                                        <li>Saved 5000K a month and corrected data consistency in descriptive content for stakeholders by debugging and fixing a data pipeline serving millions of events per day.</li>
+                                        <li>Saved 5000$ a month and corrected data consistency in descriptive content for stakeholders by debugging and fixing a data pipeline serving millions of events per day.</li>
                                         <li>Performed zero-downtime upgrades on tier 1 micro-services, serving 10K requests/second.</li>
                                     </ul>
                                 </div>
@@ -144,7 +144,7 @@
                                     <ul>
                                         <li>Taught Full Stack Software Development and Data Structures, placing over 100 students as part of the placements team
                                         </li>
-                                        <li>Published an article, getting 40K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
+                                        <li>Published an article, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
                                     </ul>
                                 </div>
                             </div>
