--- a/index.html
+++ b/index.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-16NMCRYR2D"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-<head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-16NMCRYR2D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-16NMCRYR2D');
-</script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+      gtag("config", "G-16NMCRYR2D");
+    </script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Adrian Jewell</title>
     <style>
-		html {
-			font-size: 16px;
-		}
+      html {
+        font-size: 16px;
+      }
 
-		@media screen and (min-width: 320px) {
-			html {
-				font-size: calc(16px + 6 * ((100vw - 320px) / 680));
-			}
-		}
+      @media screen and (min-width: 320px) {
+        html {
+          font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+        }
+      }
 
-		@media screen and (min-width: 1000px) {
-			html {
-				font-size: 22px;
-			}
-		}
-	</style>
-</head>
-<body>	
-<header>Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at gmail dot com)</header>
-	<section>Hi I'm Adrian, and thanks for visiting my personal website!</section>	
-	<section>
-		Feel free to check out my work and ask any questions.
-		</br><a href="https://adrianjewell.com/assets/resume/software-resume.html">Resume</a></br>
-		</br><a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos">Youtube</a>
-		</br><a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a></br>	
-	</section>
-	<section>
-		Writings:
-		</br><a href="https://adrianjewell91.github.io/decoupler-website/">How to decouple a monolith db</a></br>
-		</br><a href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/">How music and coding are so similar</a></br>
-		</br><a href="https://github.com/Adrianjewell91/how-to-code">How programmers think</a></br>
-	</section>
-</body>
+      @media screen and (min-width: 1000px) {
+        html {
+          font-size: 22px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at
+      gmail dot com)
+    </header>
+    <br />
+    <section>
+      Hi I'm Adrian, and thanks for visiting my personal website!
+    </section>
+    <section>
+      Feel free to check out my work and ask any questions.
+      <br />
+      <a href="https://adrianjewell.com/assets/resume/software-resume.html"
+        >Resume</a
+      >
+      <br />
+      <a href="https://www.youtube.com/channel/UCW9ml0UMFoXWNuyzKmXaO4w/videos"
+        >Youtube</a
+      >
+      <br />
+      <a href="https://soundcloud.com/adrianjewell/sets">Soundcloud</a>
+    </section>
+    <section>
+      Writings:
+      <br />
+      <a href="https://adrianjewell91.github.io/decoupler-website/"
+        >How to decouple a monolith db</a
+      >
+      <br />
+      <a
+        href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/"
+        >How music and coding are so similar</a
+      >
+      <br />
+      <a href="https://github.com/Adrianjewell91/how-to-code"
+        >How programmers think</a
+      >
+    </section>
+  </body>
 </html>
