--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <header>
-      Adrian Jewell, pianist and software engineer, (contact: adrianjewell91 at
+      Adrian Jewell, software engineer (and pianist), (contact: adrianjewell91 at
       gmail dot com)
     </header>
     <br />
