--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -192,7 +192,12 @@
                         <div class="socials">
                             <div class="socials__label">Phone</div>
                             <a class="socials__link setting--primary-text"
-                                href="tel: 6072216266">607-221-6266</a>
+                                href="mailto: adrianjewell91@gmail.com">adrianjewell91@gmail.com</a>
+                        </div>
+                        <div class="socials">
+                            <div class="socials__label">LinkedIn</div>
+                            <a class="socials__link setting--primary-text"
+                                href="https://www.linkedin.com/in/adrian-jewell/">Profile</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Blog</div>
