--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="section__content">
                         <div class="socials">
-                            <div class="socials__label">Phone</div>
+                            <div class="socials__label">Contact</div>
                             <a class="socials__link setting--primary-text"
                                 href="mailto: adrianjewell91@gmail.com">adrianjewell91@gmail.com</a>
                         </div>
