--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -192,7 +192,9 @@
                         <div class="socials">
                             <div class="socials__label">Contact</div>
                             <a class="socials__link setting--primary-text"
-                                href="mailto: adrianjewell91@gmail.com">adrianjewell91@gmail.com</a>
+                                href="mailto: adrianjewell91@gmail.com">adrianjewell91</a>
+                            <a class="socials__link setting--primary-text"
+                                href="mailto: adrianjewell91@gmail.com">@gmail.com</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">LinkedIn</div>
