--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -197,7 +197,7 @@
                                 href="mailto: adrianjewell91@gmail.com">@gmail.com</a>
                         </div>
                         <div class="socials">
-                            <div class="socials__label">LinkedIn</div>
+                            <div class="socials__label">Linkedin</div>
                             <a class="socials__link setting--primary-text"
                                 href="https://www.linkedin.com/in/adrian-jewell/">Profile</a>
                         </div>
