--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -75,47 +75,22 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Wayfair</div>
-                                    <div class="experience__date">Engineer L3: January 2023 - Present</div>
+                                    <div class="experience__date">Software Engineer L3: January 2023 - Present</div>
                                     </br>
-                                    <div class="experience__date">Engineer L1, L2: Dec. 2019 - March 2023</div>
+                                    <div class="experience__date">Software Engineer L1, L2: December 2019 - December 2022</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Designed and delivered event-driven systems, microservice interfaces, full-stack applications to manage the descriptive content of 30+ million products, 1000+ points of metadata per product, serving storefront, legal, and supplier clients, etc.</li>
-                                        <li>Mitigated pending legal ramifications and website takedown by decoupling and fixing a background job syncing 9 million data points.</li>
-                                        <li>Saved 5000$ a month and corrected data consistency in descriptive content for stakeholders by debugging and fixing a data pipeline serving millions of events per day.</li>
-                                        <li>Performed zero-downtime upgrades on tier 1 micro-services, serving 10K requests/second.</li>
+                                        <li>Designed and delivered event-driven systems, microservice interfaces, full-stack applications to manage descriptive content of 30+ million products.</li>
+                                        <li>Served storefront, legal, and supplier-facing clients, etc.</li>
+                                        <li>Reduced overhead by solving technical issues, such as domain coupling, memory leaks, and incorrect usage of existing data structures.</li>
+                                        <li>Implemented optimizations such as upgrading monolithic legacy systems for cloud lift and shift, decoupling high risk processes, upgrading high availability services in an evolving infrastructural environment.</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience" style="page-break-inside: avoid;">
-                                <div class="experience__header">
-                                    <div class="experience__header-line">
-                                        <div class="experience__title">Personal Projects</div>
-                                        <div class="experience__date">2017 - Present</div>
-                                    </div>
-                                </div>
-                                <div class="experience__description">
-                                    <div>
-                                        <ul>
-                                            <li>
-                                                Built <a
-                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
-                                                which was accepted into the Oberlin College start up accelerator program. </li>
-                                            <li>Won cash prizes, presented full-stack solutions at hackathons in Bay Area.</li>
-                                            <li>
-                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
-                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency.
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>                
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
@@ -149,6 +124,31 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience" style="page-break-inside: avoid;">
+                                <div class="experience__header">
+                                    <div class="experience__header-line">
+                                        <div class="experience__title">Personal Projects</div>
+                                        <div class="experience__date">2017 - Present</div>
+                                    </div>
+                                </div>
+                                <div class="experience__description">
+                                    <div>
+                                        <ul>
+                                            <li>
+                                                Built <a
+                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
+                                                which was accepted into the Oberlin College start up accelerator program. </li>
+                                            <li>Won cash prizes, presented full-stack solutions at hackathons in Bay Area.</li>
+                                            <li>
+                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
+                                            <li>Launched <a href="https://etherscan.io/token/0x4d7e3487e836cb4e402c25506b4ad81e49e93970">IdeaCoin</a>, an ERC-20 compatible crypto-currency.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                
                     </div>
                 </div>
                 <div class="section">
