--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -117,7 +117,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Taught Full Stack Software Development and Data Structures, placing over 100 students as part of the placements team
+                                        <li>Taught Full Stack Software Development and Data Structures, placing over 100 students as part of the placements team.
                                         </li>
                                         <li>Published an article, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
                                     </ul>
