--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -85,8 +85,8 @@
                                     <ul>
                                         <li>Designed and delivered event-driven systems, microservice interfaces, full-stack applications to manage descriptive content of 30+ million products.</li>
                                         <li>Served storefront, legal, and supplier-facing clients, etc.</li>
-                                        <li>Reduced overhead by solving technical issues, such as domain coupling, memory leaks, and incorrect usage of existing data structures.</li>
-                                        <li>Implemented optimizations such as upgrading monolithic legacy systems for cloud lift and shift, decoupling high risk processes, upgrading high availability services in an evolving infrastructural environment.</li>
+                                        <li>Reduced expenses by solving technical issues such as domain coupling, memory leaks, and incorrect usage of existing data structures.</li>
+                                        <li>Implemented optimizations such as upgrading monolithic legacy systems for cloud lift and shift, decoupling high-risk processes, upgrading mission critical services in an evolving infrastructural environment.</li>
                                     </ul>
                                 </div>
                             </div>
