--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -110,8 +110,8 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Educator</div>
-                                    <div class="experience__date">App Academy: Feb. - Aug. 2019 (Full Time)</div>
+                                    <div class="experience__title">App Academy</div>
+                                    <div class="experience__date">Technical Career Coach: Feb. - Aug. 2019 (Full Time)</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -128,7 +128,7 @@
                             <div class="experience" style="page-break-inside: avoid;">
                                 <div class="experience__header">
                                     <div class="experience__header-line">
-                                        <div class="experience__title">Personal Projects</div>
+                                        <div class="experience__title">Self</div>
                                         <div class="experience__date">2017 - Present</div>
                                     </div>
                                 </div>
