--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -87,6 +87,7 @@
                                         <li>Served storefront, legal, and supplier-facing clients, etc.</li>
                                         <li>Solved critical business problems by solving technical issues such as domain coupling, memory leaks, and incorrect usage of existing data structures.</li>
                                         <li>Implemented optimizations such as upgrading monolithic legacy systems for cloud lift and shift, decoupling high-risk processes, upgrading mission critical services in an evolving infrastructural environment.</li>
+                                        <li>Technologies: Java, C#, Python, Javascript, MSSQL, PHP, Git, BuildKite, Kubernetes, Docker, Spring, .NET, React, Datadog, Grafana, Elasticsearch/Kibana, Kafka, GCP.</li>
                                     </ul>
                                 </div>
                             </div>
