--- a/assets/resume/software-resume.html
+++ b/assets/resume/software-resume.html
@@ -29,7 +29,7 @@
             <div class="container__main">
                 <div class="top-block" style="margin-bottom: 3.6rem;">
                     <div class="top-block__details">
-                        <div class="top-block__name setting--primary-text">Adrian Jewell (爱德华)</div>
+                        <div class="top-block__name setting--primary-text">Adrian Jewell</div>
                         <div class="top-block__contacts">
                             <span class="top-block__city">
                                 <span>B</span>
