--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       <a href="https://github.com/Adrianjewell91/how-to-code"
         >How programmers think</a
       >
+      <br />
+      <a href="https://leetcode.com/problems/median-of-two-sorted-arrays/solutions/4590288/java-beats-100-time/"
+        >How to solve the median of 2 sorted arrays</a
+      >
     </section>
   </body>
 </html>
